<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.oshi</groupId>
        <artifactId>oshi-parent</artifactId>
        <version>7.3.1-SNAPSHOT</version>
    </parent>

    <artifactId>oshi-core-ffm</artifactId>
    <packaging>jar</packaging>

    <name>oshi-core-ffm</name>
    <description>An FFM-based (native) operating system information library for Java that aims to provide a
        cross-platform implementation to retrieve system information, such as version, memory, CPU, disk, battery, etc.</description>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <maven.compiler.testRelease>25</maven.compiler.testRelease>

        <native.access.modules>com.github.oshi.ffm</native.access.modules>
    </properties>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>oshi-common</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <!-- Test dependencies -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>de.thetaphi</groupId>
                <artifactId>forbiddenapis</artifactId>
                <configuration>
                    <failOnUnsupportedJava>false</failOnUnsupportedJava>
                    <bundledSignatures>
                        <bundledSignature>jdk-unsafe</bundledSignature>
                        <bundledSignature>jdk-deprecated</bundledSignature>
                        <bundledSignature>jdk-non-portable</bundledSignature>
                        <bundledSignature>jdk-reflection</bundledSignature>
                        <bundledSignature>jdk-system-out</bundledSignature>
                    </bundledSignatures>
                    <signaturesFiles>
                        <signaturesFile>${main.basedir}/config/forbidden-apis.txt</signaturesFile>
                        <signaturesFile>${main.basedir}/config/jna-forbidden-apis.txt</signaturesFile>
                    </signaturesFiles>
                    <suppressAnnotations>
                        <suppressAnnotation>oshi.annotation.SuppressForbidden</suppressAnnotation>
                    </suppressAnnotations>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.siom79.japicmp</groupId>
                <artifactId>japicmp-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>cmp</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>biz.aQute.bnd</groupId>
                <artifactId>bnd-maven-plugin</artifactId>
                <configuration>
                    <bnd><![CDATA[Export-Package: oshi.ffm.*,!oshi.driver.common.*,!oshi.driver.unix.bsd.*,!oshi.driver.unix.freebsd.disk.*,!oshi.driver.unix.solaris.disk.*,oshi.driver.*,oshi.hardware.platform.*,!oshi.software.common.*,oshi.software.os.linux.*,oshi.software.os.mac.*,oshi.software.os.unix.*,oshi.software.os.windows.*;-noimport:=true
                    Import-Package: ${osgi.slf4j.import.packages}, *
                    Bundle-SymbolicName: ${project.groupId}.${project.artifactId}
                    -snapshot: SNAPSHOT
                    -fixupmessages: "The default package"]]></bnd>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <includeDependencySources>true</includeDependencySources>
                    <dependencySourceIncludes>
                        <dependencySourceInclude>com.github.oshi:oshi-common</dependencySourceInclude>
                    </dependencySourceIncludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>de.sormuras.junit</groupId>
                <artifactId>junit-platform-maven-plugin</artifactId>
                <configuration>
                    <executor>JAVA</executor>
                    <javaOptions>
                        <additionalOptions>
                            <additionalOption>--show-version</additionalOption>
                        </additionalOptions>
                    </javaOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <includeDependencySources>true</includeDependencySources>
                    <dependencySourceIncludes>
                        <dependencySourceInclude>com.github.oshi:oshi-common</dependencySourceInclude>
                    </dependencySourceIncludes>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
